<resources>
    <string name="app_name">e-Regulator</string>
    <string name="lbusername">Username</string>
    <string name="lbpassword">Password</string>
    <string name="lbpasswordConfirm">Password confirm</string>
    <string name="neu_registierung">Bist du neu? Registieren</string>
    <string name="lbrusername">Username</string>
    <string name="lbemail">Email</string>
    <string name="forumlabel">Community</string>
    <string name="profillabel">Profil</string>

    <string name="btnlogin">LOGIN</string>
    <string name="btnregister">REGISTER</string>
    <string name="btncancel">ABBRECHEN</string>
    <string name="btnadd">HINZUFÜGEN</string>

    <string name="apparat1">Gerät1</string>
    <string name="lpriority">Priorität auswählen</string>
    <string name="authError">Login failed. Please try again!</string>
    <string name="loginInputError">Username oder Password darf nicht leer sein!</string>
    <string name="registerInputError">Username, Email and Password muss not be empty</string>
    <string name="loginInputLengthError">Username oder Password muss 6 Zeichen lang sein.</string>
    <string name="registrationError">Something went wrong. Please try again!</string>
    <string name="registrationSuccessfull">You are successfully registred!</string>
    <string name="registrationNotSuccessfull">Something went wrong. Please try again!</string>
    <string name="noSavedDevices">Sie haben momentan keine Geraete gespeichert.</string>

    <string name="geraetDescription">Gerät Bezeichnung</string>


    <string-array name="priorities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="nonHardwareDeviceCategory">
        <item>Smartphone</item>
        <item>Smartwatch</item>
        <item>Laptop</item>
        <item>Kopfhörer</item>
        <item>Tablet</item>
        <item>Microwelle</item>
        <item>Kühlschrank</item>
        <item>Ofen</item>
    </string-array>
    <string name="title_feed">Übersicht</string>
    <string name="title_user">Profil</string>
    <string name="title_forum">Community</string>

    <string name="feedpage_title">Devices</string>
    <string name="communitypage_title">Community</string>
    <string name="message">Test</string>


    <string name="forumWelcomeText">Teile deine Erfahrung mit Freunden.</string>
    <string name="forumWelcomeText1">Teile deine Erfahrung auf sozialen Neztwerke.</string>
    <string name="joinFriend">Share with a friend</string>
    <string name="joinCommunity">Share with community</string>
    <string name="sendmessagePlaceholder">Schreib eine Nachricht ...</string>

    <string name="privateDataText">Persönlische Daten</string>


</resources>
