<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/textColor"
    android:padding="20dp">


    <TextView
        android:id="@+id/registerInput_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerInputError"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        style="@style/error"
        />
    <TextView
        android:id="@+id/registerInputLength_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginInputLengthError"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        style="@style/error"
        />

    <TextView
        android:id="@+id/register_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationError"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        style="@style/error"
        />

    <TextView
        android:id="@+id/register_notsuccesfull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationNotSuccessfull"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        style="@style/error"
        />

    <TextView
        android:id="@+id/register_succesfull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationSuccessfull"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        style="@style/success"
        />


    <EditText
        android:id="@+id/text_rusername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/lbrusername"
        android:background="@color/inputBackground"
        android:inputType="text"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="20dp"
        android:paddingStart="10dp"
        />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/lbemail"
        android:background="@color/inputBackground"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="20dp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/register_text_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/lbpassword"
        android:background="@color/inputBackground"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="20dp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/text_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/lbpasswordConfirm"
        android:background="@color/inputBackground"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="20dp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btnregister"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        />

</LinearLayout>
