<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    >
    <EditText
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/lbusername"
        android:background="@color/inputBackground"
        android:inputType="text"
        android:textSize="18dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="20dp"
        android:paddingLeft="10dp"

        android:autofillHints="@string/lbusername"
    />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="@string/lbpassword"
        android:layout_marginTop="40dp"
        android:textSize="18dp"
        android:background="@color/inputBackground"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="20dp"
        android:paddingLeft="10dp"
        android:autofillHints="@string/lbpassword"
    />
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btnlogin"
        android:background="@color/colorPrimary"
        android:textColor="@color/textColor"
        android:textSize="18dp"
        android:layout_marginTop="60dp"
    />

    </LinearLayout>
