<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:alignItems="center"
    app:flexDirection="column"
    android:background="@color/textColor"
    tools:context=".addHardwareActivity"
    app:flexWrap="wrap">

    <ListView
        android:id="@+id/device_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:dividerHeight="0dp"
        android:divider="@null"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/inputBackground"
        android:hint="@string/geraetDescription"
        android:padding="10dp"
        android:autofillHints="@string/geraetDescription"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/inputBackground"
        android:entries="@array/priorities"
        android:prompt="@string/lpriority"
        android:spinnerMode="dropdown" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:alignItems="center"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="space_between">

        <Button
            android:id="@+id/confirm_add"
            style="@style/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnadd" />

    </com.google.android.flexbox.FlexboxLayout>
    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/footerlayout"/>
</LinearLayout>
